--- a/index.html
+++ b/index.html
@@ -1,84 +1,123 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title>在庫一覧</title>
+  <meta charset="UTF-8" />
+  <title>在庫登録</title>
   <style>
-    body { font-family: sans-serif; background: #f9f9f9; padding: 20px; color: #2c3e50; margin-top: 60px; }
-    h1, h2 { text-align: center; }
-    table { width: 100%; border-collapse: collapse; margin-bottom: 30px; table-layout: fixed; }
-    th, td { padding: 12px; border: 1px solid #ccc; text-align: center; vertical-align: middle; font-size: 16px; word-wrap: break-word; }
-    th { background-color: #3498db; color: white; }
-    button { padding: 10px 14px; border: none; border-radius: 6px; cursor: pointer; font-size: 14px; }
-    .unused { background-color: #e67e22; color: white; }
-    .delete { background-color: #c0392b; color: white; }
-    .select-group { display: flex; gap: 6px; justify-content: center; align-items: center; flex-wrap: wrap; }
-    .input-group {
-      display: flex;
-      flex-direction: column;
-      align-items: stretch;
-      gap: 6px;
-      width: 100%;
-    }
-    .input-group select,
-    .input-group input {
-      width: 100%;
-      box-sizing: border-box;
+    body {
+      font-family: sans-serif;
+      background: #f5f8fa;
+      color: #2c3e50;
+      margin: 0;
+      padding: 20px;
     }
     .nav {
-      position: fixed; top: 0; left: 0; right: 0; background: #34495e; padding: 10px; text-align: center;
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      background: #3498db;
+      color: white;
+      padding: 10px;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      z-index: 1000;
+      flex-wrap: wrap;
     }
     .nav a {
-      margin: 0 10px; color: white; text-decoration: none; font-weight: bold;
-    }
-    #editModeButton {
-      position: fixed;
-      top: 10px;
-      right: 10px;
-      background: #2c3e50;
       color: white;
-      padding: 8px 16px;
-      border-radius: 6px;
-      font-size: 14px;
-      cursor: pointer;
-      z-index: 1001;
-    }
-    #deleteSelectedBtn {
-      display: none;
-      position: fixed;
-      top: 60px;
-      right: 10px;
-      background: #c0392b;
-      color: white;
-      padding: 8px 16px;
-      border-radius: 6px;
-      font-size: 14px;
-      cursor: pointer;
-      z-index: 1001;
-    }
-    input::placeholder { color: #aaa; font-style: italic; }
-    select, input[type="text"] {
-      padding: 10px;
-      font-size: 16px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      box-sizing: border-box;
-    }
-    .manage-label {
-      display: flex;
-      align-items: center;
-      gap: 4px;
-    }
-    .manage-label span {
+      text-decoration: none;
       font-weight: bold;
     }
-    .manage-label input {
-      width: 60px;
+    h1 {
       text-align: center;
+      margin-top: 80px;
+    }
+    form {
+      max-width: 600px;
+      margin: 0 auto;
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+    label {
+      display: block;
+      margin-top: 14px;
+    }
+    input, select {
+      width: 100%;
+      padding: 16px;
+      margin-top: 6px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      font-size: 18px;
+      box-sizing: border-box;
+    }
+    button {
+      display: inline-block;
+      margin: 10px 5px 0 0;
+      background: #3498db;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      cursor: pointer;
+      padding: 14px 20px;
+    }
+    .ordered-section {
+      max-width: 800px;
+      margin: 40px auto;
+    }
+    .category {
+      font-weight: bold;
+      margin-top: 30px;
+      font-size: 20px;
+      color: #2c3e50;
+    }
+    .ordered-item {
+      background: white;
+      margin: 10px 0;
+      padding: 15px;
+      border-radius: 5px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+    .ordered-info {
+      font-size: 20px;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+    .maker-label {
+      font-weight: bold;
+      font-size: 20px;
+      color: #2c3e50;
+      margin-bottom: 10px;
+    }
+    .order-meta {
+      font-size: 18px;
+      color: #555;
+      margin-bottom: 10px;
+    }
+    .order-actions {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+    }
+    .order-actions .left-buttons button {
+      margin-right: 10px;
+    }
+    .order-actions .right-button {
+      margin-left: auto;
     }
     @media (max-width: 600px) {
-      th, td { font-size: 14px; padding: 8px; }
-      button { font-size: 13px; padding: 8px 12px; }
+      form {
+        padding: 15px;
+      }
+      .nav {
+        flex-direction: column;
+        gap: 10px;
+      }
     }
   </style>
 </head>
@@ -90,187 +129,200 @@
     <a href="report.html">📜 使用履歴</a>
   </div>
 
-  <button id="editModeButton" onclick="toggleEditMode()">🛠 編集モード</button>
-  <button id="deleteSelectedBtn" onclick="deleteSelectedItems()">🗑 選択削除</button>
+  <h1>📦 リンナイ在庫登録フォーム</h1>
+  <form id="zaikoForm">
+    <label>登録者<select name="user" required>
+      <option value="">登録者選択</option>
+      <option value="阿部">阿部</option>
+      <option value="鈴木">鈴木</option>
+      <option value="紺野">紺野</option>
+      <option value="亀岡">亀岡</option>
+      <option value="大槻">大槻</option>
+      <option value="青田">青田</option>
+      <option value="菊田">菊田</option>
+      <option value="高橋">高橋</option>
+      <option value="佐藤">佐藤</option>
+      <option value="今泉">今泉</option>
+    </select></label>
 
-  <h1>📦 未使用 在庫一覧</h1>
-  <div id="inventoryContainer"></div>
+    <label>メーカー<select name="maker">
+      <option value="リンナイ">リンナイ</option>
+    </select></label>
 
-  <script>
-    const container = document.getElementById('inventoryContainer');
-    let inventory = JSON.parse(localStorage.getItem('inventoryData') || '[]');
-    const usedReports = JSON.parse(localStorage.getItem('usedReports') || '[]');
+    <label>製品カテゴリ<select name="category" required>
+      <option value="">カテゴリ選択</option>
+      <option value="ガス給湯器">ガス給湯器</option>
+      <option value="ガス瞬間湯沸器">ガス瞬間湯沸器</option>
+      <option value="リモコン">リモコン</option>
+      <option value="配管カバー">配管カバー</option>
+    </select></label>
 
-    let editMode = false;
-    function toggleEditMode() {
-      editMode = !editMode;
-      document.querySelectorAll('.delete-checkbox').forEach(cb => cb.style.display = editMode ? 'inline-block' : 'none');
-      document.getElementById('deleteSelectedBtn').style.display = editMode ? 'inline-block' : 'none';
-      document.getElementById('editModeButton').textContent = editMode ? '✅ 編集終了' : '🛠 編集モード';
-    }
+    <div id="modelFields">
+      <div class="model-group">
+        <label>型式<input type="text" name="model[]" required></label>
+        <label>個数<input type="number" name="qty[]" min="1" value="1" required></label>
+      </div>
+    </div>
+    <button type="button" onclick="addModelField()">＋型式追加</button>
 
-    function deleteSelectedItems() {
-      const checkedBoxes = document.querySelectorAll('.delete-checkbox input:checked');
-      if (checkedBoxes.length === 0) {
-        alert("削除する在庫を選んでください。");
-        return;
-      }
-      if (!confirm("選択された在庫を削除しますか？")) return;
+    <label>🏠 現場名<input type="text" name="site" /></label>
+    <label>注文日<input type="date" name="date" /></label>
+    <button type="submit">注文済</button>
+  </form>
 
-      const idsToDelete = Array.from(checkedBoxes).map(cb => parseInt(cb.value));
-      inventory = inventory.filter(i => !idsToDelete.includes(i.id));
-      localStorage.setItem('inventoryData', JSON.stringify(inventory));
-      location.reload();
-    }
+  <div class="ordered-section" id="orderedList">
+    <h2 style="text-align:center; margin-top:40px;">📋 注文済みの商品</h2>
+  </div>
 
-    const usedMap = {};
-    usedReports.forEach(r => {
-      if (!usedMap[r.itemId]) usedMap[r.itemId] = 0;
-      usedMap[r.itemId] += parseInt(r.quantity);
-    });
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-app.js";
+    import { getDatabase, ref, push, onValue, remove } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-database.js";
 
-    const remainingItems = inventory.map(item => {
-      const used = usedMap[item.id] || 0;
-      const remaining = item.quantity - used;
-      return { ...item, remaining };
-    }).filter(item => item.remaining > 0);
+    const firebaseConfig = {
+      apiKey: "AIzaSyARhO9hECPxXopKRBZrHBAkboqmCxY651i0",
+      authDomain: "zaiko-app-54fa6.firebaseapp.com",
+      databaseURL: "https://zaiko-app-54fa6-default-rtdb.firebaseio.com",
+      projectId: "zaiko-app-54fa6",
+      storageBucket: "zaiko-app-54fa6.appspot.com",
+      messagingSenderId: "615970420186",
+      appId: "1:615970420186:web:8eab3b94d70da28f5bce3"
+    };
 
-    const categoryOptions = ["", "ガス給湯器", "ガス瞬間湯沸器", "リモコン", "配管カバー"];
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
+    const form = document.getElementById("zaikoForm");
 
-    const grouped = {};
-    remainingItems.forEach(item => {
-      const cat = item.category || "未分類";
-      if (!grouped[cat]) grouped[cat] = [];
-      grouped[cat].push(item);
-    });
-
-    function getPrefix(category) {
-      if (category.includes("給湯")) return "キ-";
-      if (category.includes("湯沸")) return "ユ-";
-      if (category.includes("リモコン")) return "リ-";
-      return "-";
-    }
-
-    Object.keys(grouped).forEach(category => {
-      const h2 = document.createElement('h2');
-      h2.textContent = `📁 ${category}`;
-      container.appendChild(h2);
-
-      const table = document.createElement('table');
-      table.innerHTML = `
-        <colgroup>
-          <col style="width: 10%">
-          <col style="width: 20%">
-          <col style="width: 15%">
-          <col style="width: 15%">
-          <col style="width: 10%">
-          <col style="width: 15%">
-          <col style="width: 15%">
-        </colgroup>
-        <thead>
-          <tr>
-            <th>登録者</th>
-            <th>カテゴリ＆現場名</th>
-            <th>商品名</th>
-            <th>型式</th>
-            <th>残数</th>
-            <th>仕入れ日</th>
-            <th>操作</th>
-          </tr>
-        </thead>
-        <tbody>
-          ${grouped[category].map(item => {
-            const selectorId = `userSelect-${item.id}`;
-            const qtyId = `qtySelect-${item.id}`;
-            const manageId = `manageId-${item.id}`;
-            const catId = `category-${item.id}`;
-            const siteId = `siteInput-${item.id}`;
-            const prefix = getPrefix(item.category || "");
-            const optionsHtml = categoryOptions.map(opt => `<option value="${opt}" ${item.category === opt ? 'selected' : ''}>${opt}</option>`).join('');
-
-            return `
-              <tr>
-                <td>${item.user}</td>
-                <td>
-                  <div class="input-group">
-                    <select id="${catId}" onchange="updateCategory(${item.id}, this.value)">${optionsHtml}</select>
-                    <input type="text" id="${siteId}" placeholder="(現場名)" value="${item.site || ''}" onchange="updateSite(${item.id}, this.value)" />
-                  </div>
-                </td>
-                <td>${item.name}</td>
-                <td>${item.model}</td>
-                <td>${item.remaining}</td>
-                <td>${item.date}</td>
-                <td>
-                  <div class="select-group">
-                    <select id="${selectorId}">
-                      <option value="">使用者選択</option>
-                      <option value="阿部">阿部</option>
-                      <option value="鈴木">鈴木</option>
-                      <option value="紺野">紺野</option>
-                      <option value="亀岡">亀岡</option>
-                      <option value="大槻">大槻</option>
-                      <option value="青田">青田</option>
-                      <option value="菊田">菊田</option>
-                      <option value="高橋">高橋</option>
-                      <option value="佐藤">佐藤</option>
-                      <option value="今泉">今泉</option>
-                    </select>
-                    <select id="${qtyId}">
-                      ${[...Array(item.remaining).keys()].map(i => `<option value="${i + 1}">${i + 1}</option>`).join('')}
-                    </select>
-                    <label class="manage-label">
-                      <span>${prefix}</span><input type="text" id="${manageId}" placeholder="番号" />
-                    </label>
-                    <button class="unused" onclick="reportUsed(${item.id}, '${selectorId}', '${qtyId}', '${manageId}', '${prefix}')">使用する</button>
-                    <span class="delete-checkbox" style="display:none"><input type="checkbox" value="${item.id}"></span>
-                  </div>
-                </td>
-              </tr>
-            `;
-          }).join('')}
-        </tbody>
+    function addModelField() {
+      const div = document.createElement("div");
+      div.className = "model-group";
+      div.innerHTML = `
+        <label>型式<input type="text" name="model[]" required></label>
+        <label>個数<input type="number" name="qty[]" min="1" value="1" required></label>
       `;
-      container.appendChild(table);
-    });
+      document.getElementById("modelFields").appendChild(div);
+    }
 
-    function reportUsed(id, selectorId, qtyId, manageId, prefix) {
-      const selectedUser = document.getElementById(selectorId).value;
-      const selectedQty = parseInt(document.getElementById(qtyId).value);
-      const manageCode = document.getElementById(manageId).value.trim();
+    form.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const formData = new FormData(form);
+      const user = formData.get("user");
+      const maker = formData.get("maker");
+      const category = formData.get("category");
+      const site = formData.get("site");
+      const date = formData.get("date") || new Date().toISOString().split("T")[0];
+      const models = formData.getAll("model[]");
+      const qtys = formData.getAll("qty[]");
 
-      if (!selectedUser || !selectedQty) {
-        alert("使用者と個数を選択してください。");
-        return;
+      for (let i = 0; i < models.length; i++) {
+        const data = {
+          user,
+          maker,
+          category,
+          site,
+          date,
+          model: models[i],
+          qty: Number(qtys[i])
+        };
+        await push(ref(db, "inventory"), data);
       }
 
-      const fullManageCode = prefix + manageCode;
-      const item = inventory.find(i => i.id === id);
-      const usedLogs = JSON.parse(localStorage.getItem('usedReports') || '[]');
-      usedLogs.push({
-        itemId: id,
-        itemName: item.name,
-        model: item.model,
-        user: selectedUser,
-        quantity: selectedQty,
-        manageCode: fullManageCode,
-        date: new Date().toLocaleString()
+      alert("Firebaseに登録しました！🎉");
+      form.reset();
+      document.getElementById("modelFields").innerHTML = `
+        <div class="model-group">
+          <label>型式<input type="text" name="model[]" required></label>
+          <label>個数<input type="number" name="qty[]" min="1" value="1" required></label>
+        </div>`;
+    });
+
+    function loadOrdered() {
+      const orderedList = document.getElementById("orderedList");
+      const inventoryRef = ref(db, "inventory");
+
+      onValue(inventoryRef, (snapshot) => {
+        const data = snapshot.val();
+        orderedList.innerHTML = '<h2 style="text-align:center; margin-top:40px;">📋 注文済みの商品</h2>';
+        if (!data) return;
+
+        const grouped = {};
+        Object.entries(data).forEach(([id, item]) => {
+          const key = `${item.category}-${item.user}-${item.site}-${item.maker}-${item.date}`;
+          if (!grouped[key]) grouped[key] = { ...item, items: [], ids: [] };
+          grouped[key].items.push({ model: item.model, qty: item.qty });
+          grouped[key].ids.push(id);
+        });
+
+        Object.values(grouped).forEach(group => {
+          const title = document.createElement("div");
+          title.className = "category";
+          title.textContent = group.category;
+          orderedList.appendChild(title);
+
+          const div = document.createElement("div");
+          div.className = "ordered-item";
+
+          const makerInfo = document.createElement("div");
+          makerInfo.className = "maker-label";
+          makerInfo.textContent = `メーカー: ${group.maker}`;
+
+          const info = document.createElement("div");
+          info.className = "ordered-info";
+          group.items.forEach(i => {
+            const itemDiv = document.createElement("div");
+            itemDiv.innerHTML = `${i.model}（${i.qty}台）`;
+            info.appendChild(itemDiv);
+          });
+
+          const meta = document.createElement("div");
+          meta.className = "order-meta";
+          meta.innerHTML = `登録者: ${group.user} ／ 現場名: ${group.site} ／ 日付: ${group.date}`;
+
+          const actions = document.createElement("div");
+          actions.className = "order-actions";
+          actions.innerHTML = `
+            <div class="left-buttons">
+              <button onclick="registerToLocal('${group.maker}', '${group.category}', '${group.site}', '${group.date}', '${group.user}', '${group.items.map(i => i.model).join(',')}')">✅ 登録</button>
+              <button onclick='deleteGroup(${JSON.stringify(group.ids)})'>🗑 削除</button>
+            </div>
+            <div class="right-button">
+              <button onclick="location.href='order-sheet.html?maker=${group.maker}'">📄 注文書作成</button>
+            </div>`;
+
+          div.appendChild(makerInfo);
+          div.appendChild(info);
+          div.appendChild(meta);
+          div.appendChild(actions);
+          orderedList.appendChild(div);
+        });
       });
-      localStorage.setItem('usedReports', JSON.stringify(usedLogs));
-      alert(`「${item.name}」を ${selectedQty} 個（${fullManageCode}）、${selectedUser} さんが使用しました！`);
-      location.reload();
     }
 
-    function updateCategory(id, newCategory) {
-      inventory = inventory.map(i => i.id === id ? { ...i, category: newCategory } : i);
-      localStorage.setItem('inventoryData', JSON.stringify(inventory));
-      location.reload();
-    }
+    window.registerToLocal = function(maker, category, site, date, user, model) {
+      const existing = JSON.parse(localStorage.getItem('zaiko') || '[]');
+      existing.push({ maker, category, site, date, user });
+      localStorage.setItem('zaiko', JSON.stringify(existing));
+      alert("未使用一覧に登録しました！");
+    };
 
-    function updateSite(id, newSite) {
-      inventory = inventory.map(i => i.id === id ? { ...i, site: newSite } : i);
-      localStorage.setItem('inventoryData', JSON.stringify(inventory));
-    }
+    window.deleteGroup = function(ids) {
+      if (confirm("この注文をすべて削除しますか？")) {
+        const promises = ids.map(id =>
+          remove(ref(db, `inventory/${id}`))
+        );
+
+        Promise.all(promises)
+          .then(() => {
+            alert("削除しました！");
+            loadOrdered(); // 再読み込み！
+          })
+          .catch((err) => {
+            console.error("削除中にエラー:", err);
+            alert("削除に失敗しました💦");
+          });
+      }
+    };
+
+    window.addEventListener("DOMContentLoaded", loadOrdered);
   </script>
 </body>
 </html>
