zaiko-toroku.html更新

--- a/zaiko-toroku.html
+++ b/zaiko-toroku.html
@@ -2,8 +2,8 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>在庫登録</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body {
       font-family: sans-serif;
@@ -119,8 +119,18 @@
         flex-direction: column;
         gap: 10px;
       }
-      .ordered-info, .maker-label, .order-meta {
-        font-size: 16px;
+      .order-actions {
+        flex-direction: column;
+        align-items: stretch;
+      }
+      .order-actions .left-buttons,
+      .order-actions .right-button {
+        width: 100%;
+        margin: 5px 0;
+      }
+      .order-actions button {
+        width: 100%;
+        margin: 5px 0;
       }
     }
   </style>
@@ -138,15 +148,29 @@
     <label>登録者<select name="user" required>
       <option value="">登録者選択</option>
       <option value="阿部">阿部</option>
-      <!-- 省略可: 他の登録者 -->
+      <option value="鈴木">鈴木</option>
+      <option value="紺野">紺野</option>
+      <option value="亀岡">亀岡</option>
+      <option value="大槻">大槻</option>
+      <option value="青田">青田</option>
+      <option value="菊田">菊田</option>
+      <option value="高橋">高橋</option>
+      <option value="佐藤">佐藤</option>
+      <option value="今泉">今泉</option>
     </select></label>
+
     <label>メーカー<select name="maker">
       <option value="リンナイ">リンナイ</option>
     </select></label>
+
     <label>製品カテゴリ<select name="category" required>
       <option value="">カテゴリ選択</option>
       <option value="ガス給湯器">ガス給湯器</option>
+      <option value="ガス瞬間湯沸器">ガス瞬間湯沸器</option>
+      <option value="リモコン">リモコン</option>
+      <option value="配管カバー">配管カバー</option>
     </select></label>
+
     <div id="modelFields">
       <div class="model-group">
         <label>型式<input type="text" name="model[]" required></label>
@@ -154,6 +178,7 @@
       </div>
     </div>
     <button type="button" onclick="addModelField()">＋型式追加</button>
+
     <label>🏠 現場名<input type="text" name="site" /></label>
     <label>注文日<input type="date" name="date" /></label>
     <button type="submit">注文済</button>
@@ -181,14 +206,15 @@
     const db = getDatabase(app);
     const form = document.getElementById("zaikoForm");
 
-    function addModelField() {
+    window.addModelField = function () {
       const div = document.createElement("div");
       div.className = "model-group";
       div.innerHTML = `
         <label>型式<input type="text" name="model[]" required></label>
-        <label>個数<input type="number" name="qty[]" min="1" value="1" required></label>`;
+        <label>個数<input type="number" name="qty[]" min="1" value="1" required></label>
+      `;
       document.getElementById("modelFields").appendChild(div);
-    }
+    };
 
     form.addEventListener("submit", async (e) => {
       e.preventDefault();
@@ -202,7 +228,15 @@
       const qtys = formData.getAll("qty[]");
 
       for (let i = 0; i < models.length; i++) {
-        const data = { user, maker, category, site, date, model: models[i], qty: Number(qtys[i]) };
+        const data = {
+          user,
+          maker,
+          category,
+          site,
+          date,
+          model: models[i],
+          qty: Number(qtys[i])
+        };
         await push(ref(db, "inventory"), data);
       }
 
@@ -287,13 +321,15 @@
     window.deleteGroup = function(ids) {
       if (confirm("この注文をすべて削除しますか？")) {
         const promises = ids.map(id => remove(ref(db, `inventory/${id}`)));
-        Promise.all(promises).then(() => {
-          alert("削除しました！");
-          loadOrdered();
-        }).catch((err) => {
-          console.error("削除中にエラー:", err);
-          alert("削除に失敗しました💦");
-        });
+        Promise.all(promises)
+          .then(() => {
+            alert("削除しました！");
+            loadOrdered();
+          })
+          .catch((err) => {
+            console.error("削除中にエラー:", err);
+            alert("削除に失敗しました💦");
+          });
       }
     };
 
