inventory-list.html 修正

--- a/inventory-list.html
+++ b/inventory-list.html
@@ -81,6 +81,50 @@
       button { font-size: 13px; padding: 8px 12px; }
     }
   </style>
+
+<!-- Firebase SDK -->
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyARhO9hECPxXopKRBZrHBAkboqmCxY651i0",
+    authDomain: "zaiko-app-54fa6.firebaseapp.com",
+    databaseURL: "https://zaiko-app-54fa6-default-rtdb.firebaseio.com",
+    projectId: "zaiko-app-54fa6",
+    storageBucket: "zaiko-app-54fa6.appspot.com",
+    messagingSenderId: "615970420186",
+    appId: "1:615970420186:web:8eab3b94d70da28f5bce3"
+  };
+  firebase.initializeApp(firebaseConfig);
+
+  function loadInventoryFromFirebase() {
+    firebase.database().ref("inventory").once("value").then(snapshot => {
+      const data = snapshot.val();
+      const tableBody = document.getElementById("inventory-body");
+      tableBody.innerHTML = "";
+      if (!data) return;
+      Object.entries(data).forEach(([key, item]) => {
+        const row = document.createElement("tr");
+        row.innerHTML = `
+          <td><input type="checkbox" class="select-checkbox" data-id="${key}"></td>
+          <td>${item.user || ""}</td>
+          <td>${item.name || item.maker || ""}</td>
+          <td>${item.category || ""}</td>
+          <td>${item.site || ""}</td>
+          <td>${item.model || ""}</td>
+          <td>${item.qty || 0}</td>
+          <td>${item.date || ""}</td>
+        `;
+        tableBody.appendChild(row);
+      });
+    });
+  }
+
+  window.addEventListener("DOMContentLoaded", () => {
+    loadInventoryFromFirebase();
+  });
+</script>
+
 </head>
 <body>
   <div class="nav">
