inventory-list.html 修正

--- a/inventory-list.html
+++ b/inventory-list.html
@@ -189,7 +189,7 @@
     });
 
     function getPrefix(category) {
-      if (category.includes("給湯")) return "キ-";
+      if (category.includes("給湯器")) return "キ-";
       if (category.includes("湯沸器")) return "ユ-";
       if (category.includes("リモコン")) return "リ-";
       return "-";
